<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>support_shooting_base</name>
  <version>0.0.0</version>
  <description>Panel detector plugin base</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>support_shooting_param</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>vision_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>